@@ -173,10 +173,9 @@ string PathOCLBaseRenderEngine::GetCachedKernelsHash(const RenderConfig &renderC
 
 	const float epsilonMin = renderConfig.GetProperty("scene.epsilon.min").Get<float>();
 	const float epsilonMax = renderConfig.GetProperty("scene.epsilon.max").Get<float>();
-	
-	const bool usePixelAtomics = renderConfig.GetProperty("pathocl.pixelatomics.enable").Get<bool>();
-	
+		
 	const Properties &cfg = renderConfig.cfg;
+	const bool usePixelAtomics = cfg.Get(Property("pathocl.pixelatomics.enable")(false)).Get<bool>();
 	const bool useCPUs = cfg.Get(GetDefaultProps().Get("opencl.cpu.use")).Get<bool>();
 	const bool useGPUs = cfg.Get(GetDefaultProps().Get("opencl.gpu.use")).Get<bool>();
 	const string oclDeviceConfig = cfg.Get(GetDefaultProps().Get("opencl.devices.select")).Get<string>();
